JumpScript/tests/baselines/reference/taggedTemplatesWithIncompleteTemplateExpressions1.errors.txt
tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions1.jump(5,17): error TS1109: Expression expected.


==== tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions1.jump (1 errors) ====
    function f(x: TemplateStringsArray, y: string, z: string) {
    }
    
    // Incomplete call, not enough parameters.
    f `123qdawdrqw${
                    
!!! error TS1109: Expression expected.